--- a/config_sample.env
+++ b/config_sample.env
@@ -9,13 +9,14 @@ TELEGRAM_HASH = ""                          # Require restart after changing it 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
+DB_NAME = ""                                # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
-DEFAULT_UPLOAD = "gd"
+DEFAULT_UPLOAD = "rc"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "60"
 INCOMPLETE_TASK_NOTIFIER = "False"
@@ -34,7 +35,7 @@ USE_SERVICE_ACCOUNTS = "False"
 IS_TEAM_DRIVE = "False"
 STOP_DUPLICATE = "False"
 DISABLE_DRIVE_LINK = "False"
-GD_INFO = "Uploaded by WZML-X"
+GD_INFO = "Uploaded by Chihiro"
 
 # API's/Cookies
 REAL_DEBRID_API = ""
@@ -117,9 +118,9 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "WZ-M/L-X"
-AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/WZML_X"
+TITLE_NAME = "CHHIRO/X"
+AUTHOR_NAME = "Chihiro"
+AUTHOR_URL = "https://t.me/chihirr0"
 COVER_IMAGE = ""
 
 # Extra
